--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ amqp==5.2.0
 asgiref==3.8.1
 attrs==23.2.0
 billiard==4.2.0
+boto3==1.34.70
+botocore==1.34.70
 celery==5.3.6
 certifi==2024.2.2
 charset-normalizer==3.3.2
@@ -14,26 +16,32 @@ dj-database-url==2.1.0
 Django==5.0.3
 django-celery-beat==2.6.0
 django-rest-framework==0.1.0
+django-storages==1.14.2
 django-timezone-field==6.1.0
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
 drf-spectacular==0.27.1
+gunicorn==21.2.0
 idna==3.6
 inflection==0.5.1
+jmespath==1.0.1
 jsonschema==4.21.1
 jsonschema-specifications==2023.12.1
 kombu==5.3.5
+packaging==24.0
 pillow==10.2.0
 prompt-toolkit==3.0.43
 psycopg2-binary==2.9.9
 PyJWT==2.8.0
 python-crontab==3.0.0
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 PyYAML==6.0.1
 redis==5.0.3
 referencing==0.34.0
 requests==2.31.0
 rpds-py==0.18.0
+s3transfer==0.10.1
 six==1.16.0
 sqlparse==0.4.4
 typing_extensions==4.10.0
